--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EduAPP">
         <activity
+            android:name=".student.studentHome"
+            android:exported="true" />
+        <activity
+            android:name=".students.studentsHome"
+            android:exported="true"
+            android:label="@string/title_activity_students_home"
+            android:theme="@style/Theme.EduAPP.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
