--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EduAPP">
         <activity
-            android:name=".student.studentHome"
+            android:name=".login"
             android:exported="true" />
         <activity
-            android:name=".students.studentsHome"
-            android:exported="true"
-            android:label="@string/title_activity_students_home"
-            android:theme="@style/Theme.EduAPP.NoActionBar" />
+            android:name=".student.studentHome"
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
