--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EduAPP">
         <activity
+            android:name=".teachers.teachers_dashboard"
+            android:exported="true" />
+        <activity
             android:name=".student.studentHome"
             android:exported="true" />
         <activity
@@ -18,7 +21,7 @@
             android:label="@string/title_activity_students_home"
             android:theme="@style/Theme.EduAPP.NoActionBar" />
         <activity
-            android:name=".MainActivity"
+            android:name=".teachers.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
