--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EduAPP">
         <activity
+            android:name=".ToDoList.TodoList"
+            android:exported="true" />
+        <activity
+            android:name=".ToDoList.AddNoteActivity"
+            android:exported="true" />
+        <activity
             android:name=".Auth.Update_Profile"
             android:exported="true" />
         <activity
