--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
         }
     }
 
-    viewBinding.enabled=true
+    viewBinding.enabled = true
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -57,10 +57,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31"
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation "com.android.support:support-v4:18.0.+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.32"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.ismaeldivita:chip-navigation-bar:1.3.4'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
