--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,15 +26,19 @@
         <activity
             android:name=".Auth.SplashScreen"
             android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".student.studentHome"
+            android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity
-            android:name=".student.studentHome"
-            android:exported="true" />
         <activity
             android:name=".student.studentsHome"
             android:exported="true"
