--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EduAPP">
         <activity
-
-            android:name=".ToDoList.TodoList"
+            android:name=".chats.chatWindow"
             android:exported="true" />
+        <activity
+            android:name=".ToDoList.TodoList"
+            android:exported="true"></activity>
         <activity
             android:name=".ToDoList.AddNoteActivity"
             android:exported="true" />
@@ -26,7 +28,13 @@
             android:name=".Auth.AuthActivity"
             android:exported="true" />
         <activity
+            android:name=".teachers.uploadAssignment"
+            android:exported="true" />
+        <activity
             android:name=".teachers.teachers_dashboard"
+            android:exported="true"></activity>
+        <activity
+            android:name=".Auth.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,9 +42,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Auth.SplashScreen"
-            android:exported="true"></activity>
         <activity
             android:name=".student.studentHome"
             android:exported="true"></activity>
