--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.eduapp">
+    package="com.example.eduapp" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EduAPP">
+        android:theme="@style/Theme.EduAPP" >
+        <activity
+            android:name=".teachers.Ques_assignment"
+            android:exported="true" />
+        <activity
+            android:name=".teachers.window_teachers"
+            android:exported="true" />
         <activity
             android:name=".student.dummy"
             android:exported="true" />
@@ -29,7 +35,7 @@
             android:exported="true" />
         <activity
             android:name=".teachers.teachers_dashboard"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
